--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@ title: Pojects
 
       <div class="clearfix float-my-children">
          <img src="{{ site.baseurl }}{{ post.thumbnail }}" height="300">
-         <div>{{ post.excerpt | strip_html | escape }}</div>
+         <div width = "200">{{ post.excerpt | strip_html | escape }}</div>
       </div>
         
       <br>
