--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@ title: Pojects
       </header>
 
       <div class="clearfix float-my-children">
-         <img src="{{ site.baseurl }}{{ post.thumbnail }}" height="300">
+         <img src="{{ site.baseurl }}{{ post.thumbnail }}">
          <div width = "10px">{{ post.excerpt | strip_html | escape }}</div>
       </div>
         
