--- a/projects.html
+++ b/projects.html
@@ -31,8 +31,8 @@ title: Pojects
       </header>
 
       <div class="clearfix float-my-children">
-         <img src="{{ site.baseurl }}{{ post.thumbnail }}" heigh= "200">
-         <div width=10px>{{ post.excerpt | strip_html | escape }}</div>
+         <img src="{{ site.baseurl }}{{ post.thumbnail }}" heigh=200>
+         <div width=10>{{ post.excerpt | strip_html | escape }}</div>
       </div>
         
       <br>
