--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@ title: Pojects
       </header>
 
       <div class="clearfix float-my-children">
-         <img src="{{ site.baseurl }}{{ post.thumbnail }}" width:50%>
+         <img src="{{ site.baseurl }}{{ post.thumbnail }}" width=50>
          <div width=10>{{ post.excerpt | strip_html | escape }}</div>
       </div>
         
