--- a/blog.html
+++ b/blog.html
@@ -5,10 +5,8 @@
 		<title>TITLE</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="/path/to/folder/css/academicons.min.css"/>
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<link rel="stylesheet" href="css/main.css" />
+		
 	</head>
 	<body id="top">
 
