--- a/blog.html
+++ b/blog.html
@@ -14,10 +14,10 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Geo-spatial machine learning &</strong><br />
-					<strong>urban applications.</strong><br />
+					<h1><strong>Data Science &</strong><br />
+					<strong>Criminology</strong><br />
 					PhD student at<br />
-					<a href="http://www.wisc.warwick.ac.uk/">University of Warwick</a>.
+					<a href="https://essl.leeds.ac.uk/law/pgr/830/natacha-chenevoy">University of Leeds</a>.
 					</h1>
 				</div>
 			</header>
@@ -103,12 +103,12 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon fa-home"><span class="label">Address</span></h3>
-										London<br />
+										Leeds<br />
 										United Kingdom
 									</li>
 									<li>
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href="mailto:konstantin.klemmer@gmx.de">k.klemmer@warwick.ac.uk</a>
+										<a href="mailto:mednche@leeds.ac.uk">mednche@leeds.ac.uk</a>
 									</li>
 								</ul>
 							</div>
@@ -120,14 +120,10 @@
 				<div class="inner">
 					<ul class="icons">
 						<li><a href="https://scholar.google.co.uk/citations?user=ltmGyokAAAAJ&hl=de" class="icon fa-graduation-cap"><span class="label">Google Scholar</span></a></li>
-						<li><a href="https://twitter.com/kklmmr" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://github.com/konstantinklemmer" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="https://www.linkedin.com/in/konstantinklemmer/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-						<li><a href="https://medium.com/@kklmmr" class="icon fa-medium"><span class="label">Medium</span></a></li>
-						<li><a href="mailto:k.klemmer@warwick.ac.uk" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Konstantin Klemmer, <script>document.write(new Date().getFullYear())</script></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li><a href="https://twitter.com/NatachaChenevoy" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://github.com/mednche" class="icon fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/natachachenevoy/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+						<li><a href="mailto:mednche@leeds.ac.uk" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
 			</footer>
