--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/photo.png" alt="" /></a>
 					<h1><strong>Data Science &</strong><br />
 					<strong>Criminology</strong><br />
 					PhD student at<br />
