--- a/blog.html
+++ b/blog.html
@@ -27,10 +27,10 @@
 			<div id="main">
 				<nav id="nav-menu">
 					<ul>
-						<li><a href="https://konstantinklemmer.github.io/blog">Blog</a></li>
+						<li><a href="https://mednche.github.io/blog.html">Blog</a></li>
 						<!--<li><a href="https://konstantinklemmer.github.io/research">Research</a></li>-->
-						<li><a href="https://konstantinklemmer.github.io/publications">Publications</a></li>
-						<li><a href="https://konstantinklemmer.github.io">Home</a></li>
+						<!--<li><a href="https://konstantinklemmer.github.io/publications">Publications</a></li>-->
+						<li><a href="https://mednche.github.io">Home</a></li>
 					</ul>
 				</nav>
 
