--- a/blog.html
+++ b/blog.html
@@ -13,8 +13,8 @@ title: Pojects
 			<article class="6u 12u$(xsmall) work-item">    
 
 			    <a href="images/" class="image fit thumb"><img src="{{post.thumbnail}}" alt="" /></a>
-				<h3>Post title: {{ post.title }}</h3>
-				<p>Post teaser: {{ post.teaser }}</p>
+				<h3>{{ post.title }}</h3>
+				<p>{{ post.teaser }}</p>
 				<ul class="actions">
 					<li><a href="{{ post.url }}" class="button">Read more</a></li>
 				</ul>
