--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@ title: Pojects
 
 <!-- One -->
 <section id="One">
-	<h2>Blog</h2>
+	<h2>Projects</h2>
 
 		<div class="row">
 			{% for post in site.posts %}
