--- a/blog.html
+++ b/blog.html
@@ -31,26 +31,5 @@ title: Pojects
 	</ul>-->
 
 </section>
-				
-<!-- Footer -->
-<footer id="footer">
-	<div class="inner">
-		<ul class="icons">
-			<li><a href="https://scholar.google.co.uk/citations?user=ltmGyokAAAAJ&hl=de" class="icon fa-graduation-cap"><span class="label">Google Scholar</span></a></li>
-			<li><a href="https://twitter.com/NatachaChenevoy" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-			<li><a href="https://github.com/mednche" class="icon fa-github"><span class="label">Github</span></a></li>
-			<li><a href="https://www.linkedin.com/in/natachachenevoy/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-			<li><a href="mailto:mednche@leeds.ac.uk" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-		</ul>
-	</div>
-</footer>
 
-
-
-<!-- Scripts -->
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/jquery.poptrox.min.js"></script>
-<script src="assets/js/skel.min.js"></script>
-<script src="assets/js/util.js"></script>
-<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-<script src="assets/js/main.js"></script>
+{% include contact.html %}
