--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@ title: Pojects
 
 			<article class="6u 12u$(xsmall) work-item">    
 
-			    <a href="images/" class="image fit thumb"><img src="{{post.thumbnail}}" alt="" /></a>
+			    <a href="{{ post.url }}" class="image fit thumb"><img src="{{post.thumbnail}}" alt="" /></a>
 				<h3>{{ post.title }}</h3>
 				<p>{{ post.teaser }}</p>
 				
