--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@ title: Blog
 	<h2>Projects</h2>
 
 		<div class="row">
-			{% for post in site.posts %}
+			{% for post in site.blogposts %}
 
 			<article class="6u 12u$(xsmall) work-item">    
 
