--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@ title: Pojects
 	<h2>Projects</h2>
 
 		<div class="row">
-			{% for post in site.projectposts %}
+			{% for post in site.posts %}
 
 			<article class="6u 12u$(xsmall) work-item">    
 
