--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@ title: Blog
 
 <!-- One -->
 <section id="One">
-	<h2>Projects</h2>
+	<h2>Blog</h2>
 
 		<div class="row">
 			{% assign blogposts = site.posts | where:"blog", "true" %}
