--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@ title: Pojects
 			<article class="6u 12u$(xsmall) work-item">    
 
 			    <a href="{{ post.url }}" class="image fit thumb"><img src="{{post.thumbnail}}" alt="" /></a>
-				<h3>{{ post.title }}</h3>
+				<h3>{{ post.small-title }}</h3>
 				<p>{{ post.teaser }}</p>
 				
 				</br>
