--- a/projects.html
+++ b/projects.html
@@ -17,6 +17,7 @@ title: Pojects
 			    <a href="{{ post.url }}" class="image fit thumb"><img src="{{post.thumbnail}}" alt="" /></a>
 				<h3>{{ post.small-title }}</h3>
 				<p>{{ post.teaser }}</p>
+				<p>{{ post.tags }}</p>
 				
 				</br>
 				<ul class="actions">
