--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,9 @@ title: Pojects
 			    <a href="{{ post.url }}" class="image fit thumb"><img src="{{post.thumbnail}}" alt="" /></a>
 				<h3>{{ post.small-title }}</h3>
 				<p>{{ post.teaser }}</p>
-				<p>{{ post.tags }}</p>
+
+				{% for tag in post.tags %}
+				<p>{{tag}}</p>
 				
 				</br>
 				<ul class="actions">
