--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@ title: Pojects
 				<p>{{ post.teaser }}</p>
 
 				{% for tag in post.tags %}
-				<p>{{tag}} &nbsp;</p>
+				<p>{{tag}}</p>
 				
 				</br>
 				<ul class="actions">
