--- a/projects.html
+++ b/projects.html
@@ -18,10 +18,12 @@ title: Pojects
 				<h3>{{ post.small-title }}</h3>
 				<p>{{ post.teaser }}</p>
 
-				{% for tag in post.tags %}
-				<p>{{tag}}</p>
-				{% endfor %}
-				
+				<small>
+				    {% for tag in post.tags %}
+				    <a href="/tags/{{ tag }}/">{{ tag }}</a>
+				    {% endfor %}
+				</small>
+
 				</br>
 				<ul class="actions">
 					<li><a href="{{ post.url }}" class="button">Read more</a></li>
