--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@ title: Pojects
 
 				<small>
 				    {% for tag in post.tags %}
-				    <a href="/tags/{{ tag }}/">{{ tag }}</a>
+				    <p> {{ tag }}</p>
 				    {% endfor %}
 				</small>
 
