--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@ title: Pojects
 
 				<small>
 				    {% for tag in post.tags %}
-				    <li class="inline archive_list"><a class="tag_list_link" href="/tag/">{.{ tag }}</a></li>
+				    <li class="inline archive_list"><a class="tag_list_link" href="/tag/">{{ tag }}</a></li>
 				    {% endfor %}
 				</small>
 
