--- a/projects.html
+++ b/projects.html
@@ -19,8 +19,14 @@ title: Pojects
 				<p>{{ post.teaser }}</p>
 
 				<small>
-				    {% for tag in post.tags %}
-				    <li class="inline archive_list"><a class="tag_list_link" href="/tag/">{{ tag }}</a></li>
+					<h5><i class="icon-tags"></i> 
+						{% for tag in post.tags %}
+	      						| <a href="/tag/" title="View posts tagged with &quot;&quot;"><u>{{ tag }}</u></a> |  
+							{% if forloop.last != true %} 
+	      						{% endif %} 
+						{% endfor %}
+					</h5>
+
 				    {% endfor %}
 				</small>
 
