--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@ title: Pojects
 				<small>
 					<h5><i class="icon-tags"></i> 
 						{% for tag in post.tags %}
-	      						| <a href="/tag/" title="View posts tagged with &quot;{{tag}}&quot;"><u>{{ tag }}</u></a> |  
+	      						| <a href="/tags#{{ tag }}" title="View posts tagged with &quot;{{tag}}&quot;"><u>{{ tag }}</u></a> |  
 							{% if forloop.last != true %} 
 	      						{% endif %} 
 						{% endfor %}
